--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,11 +14,15 @@ on:
 env:
   IMAGE_NAME: mysql-client
   REPO_PATH: ${{ github.repository_owner }}
+  DB_NAME: initech
+  DB_USER: user
+  DB_PASS: pass
 
 jobs:
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
   push:
+    name: Build, test and push image.
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
 
@@ -26,11 +30,32 @@ jobs:
       contents: read
       packages: write
 
+    services:
+      mysql:
+        image: mysql:8.0.28
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+          MYSQL_DATABASE: ${{ env.DB_NAME }}
+          MYSQL_USER: ${{ env.DB_USER }}
+          MYSQL_PASSWORD: ${{ env.DB_PASS }}
+          MYSQL_INITDB_SKIP_TZINFO: "yes"
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
       - uses: actions/checkout@v3
 
       - name: Build image
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
+
+      - name: Test image
+        run: |
+          docker run --rm --network ${{ job.container.network}} --entrypoint mysqladmin \
+            $IMAGE_NAME:latest ping -h mysql -u $DB_USER -p$DB_PASS \
+            || exit 1;
+          echo "SELECT 'Test' as ' ';" | \
+            docker run --rm --network ${{ job.container.network}} --interactive \
+            $IMAGE_NAME:latest -A -B -h mysql -D $DB_NAME -u $DB_USER -p$DB_PASS \
+            ;
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
